[package]
name = "influxdb-dispatcher"
version = "2.0.0"
edition = "2021"
description = "Batch metrics collection using influxdb"
authors = [ "cloudwalk.io" ]
license = "MIT"
repository = "https://github.com/cloudwalk/influxdb-dispatcher"
keywords = [ "influxdb", "grafana" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
influxdb = { version = "0.5", default-features = false }

# Config
envconfig = "0.9"

# Logging
tracing = "0.1"

# Async
tokio = { version = "1.14", features = ["macros"] }
futures = { version = "0.3", default-features = false, features = ["std"] }

# Serializing
serde = "1.0"
toml = "0.5"

[features]
default = ["reqwest-client"]
reqwest-client = ["influxdb/reqwest-client"]
reqwest-client-rustls = ["influxdb/reqwest-client-rustls"]
util = []
